[gd_scene load_steps=5 format=2]

[ext_resource path="res://test/hobo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Image/DefaultCharacter2.png" type="Texture" id=2]
[ext_resource path="res://GDScript/EmployeeInfoButton.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="employee_info_ui_button" type="Button"]
margin_right = 80.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="employee_texture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -23.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 24, 32 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="employee_name_lable" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -17.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 1 )
text = "employee_name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire_button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 21.0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="." to="." method="_on_employee_info_ui_button_pressed"]
[connection signal="pressed" from="fire_button" to="." method="_on_fire_button_pressed"]
